--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./client/assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>another-page</title>
+
+    <link href="./styles/style.css" rel="stylesheet" />
+    <title>PORTFOLIO</title>
   </head>
   <body></body>
 </html>
