--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./client/assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AVIV DROR - DEVELOPER</title>
-
+    <!-- imported fonts; "Estonia" and "Libre Baskerville" -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Estonia&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=NTR&display=swap"
+      rel="stylesheet"
+    />
+    <!-- imported fonts; "Estonia" and "Libre Baskerville" -->
     <link href="./styles/style.css" rel="stylesheet" />
+    <title>AVIV DROR - DEVELOPER</title>
   </head>
-  <body></body>
+  <body>
+    <div class="text">
+      <h1>test</h1>
+      <p>check check check</p>
+    </div>
+    <div class="gross">
+      <h1>test</h1>
+      <p>check check check</p>
+    </div>
+  </body>
 </html>
