create intro poem

--- a/index.html
+++ b/index.html
@@ -16,13 +16,50 @@
     <title>AVIV DROR - DEVELOPER</title>
   </head>
   <body>
-    <div class="text">
-      <h1>test</h1>
-      <p>check check check</p>
+    <!-- bg -->
+    <div class="home">
+      <!-- intro poem -->
+      <div class="ipoem">
+        <div class="ipoem__txt">
+          <p><span class="ipoem__th">"</span> It comes</p>
+          <p class="ipoem__lg">Unadorned</p>
+          <p>Like a phrase</p>
+          <p>Strong enough to cast a <span class="ipoem__md">spell;</span></p>
+          <p>It comes</p>
+          <p class="ipoem__md">Unbidden,</p>
+          <p>
+            Like the turn of <span class="ipoem__lg">sun</span> through hills
+          </p>
+          <p>
+            Or <span class="ipoem__lg">stars</span> in wheels of
+            <span class="ipoem__md">song.</span>
+          </p>
+          <p>
+            The jeweled feet of women <span class="ipoem__lg">dance</span> the
+            earth.
+          </p>
+          <p>Arousing it to spring.</p>
+          <p>
+            Shoulders broad as a road bend to share the weight of
+            <span class="ipoem__lg">years.</span>
+          </p>
+          <p>
+            <span class="ipoem__md">Profiles</span> breach the distance and lean
+          </p>
+          <p>Toward an ordinary <span class="ipoem__lg">kiss.</span></p>
+          <p class="ipoem__th">Bliss.</p>
+          <p>
+            It comes naked into the world like a
+            <span class="ipoem__md">charm.</span>
+            <span class="ipoem__th">"</span>
+          </p>
+          <p class="ipoem__itl">
+            <span class="ipoem__md">- Toni Morrison</span> “It Comes Unadorned”
+          </p>
+        </div>
+      </div>
+      <!-- intro poem -->
     </div>
-    <div class="gross">
-      <h1>test</h1>
-      <p>check check check</p>
-    </div>
+    <!-- bg -->
   </body>
 </html>
