create nav bar buttons

--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
         </div>
       </div>
       <!-- intro poem -->
+      <!-- nav bar -->
+      <div class="navbar">
+        <a class="navbar__pri" href="#">Find Me</a>
+        <a class="navbar__sec" href="#">My Work</a>
+      </div>
+      <!-- nav bar -->
     </div>
     <!-- bg -->
   </body>
