add intro section

--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
             stroke="#221700"
           />
         </svg>
-        <p class="isec__16">artist</p>
-        <a class="navbar__sec" href="#">My Work</a>
-        <p class="isec__17">but</p>
+        <p class="isec__16">artist.</p>
+        <a class="navbar__sec__2" href="#">My Work</a>
+        <p class="isec__17">But,</p>
         <p class="isec__18">enough about me.</p>
         <p class="isec__19">Tell me about</p>
         <p class="isec__20">You;</p>
