add about section

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
         </svg>
         <p class="isec__9 hide">For</p>
         <svg
+          focusable="none"
           class="isec__10 circ"
           width="45"
           height="45"
@@ -198,6 +199,7 @@
           />
         </svg>
         <svg
+          focusable="none"
           class="isec__11__a line"
           width="155"
           height="80"
@@ -212,6 +214,7 @@
           />
         </svg>
         <svg
+          focusable="none"
           class="isec__11 circ"
           width="45"
           height="45"
