--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <!-- imported fonts; "Estonia" and "Libre Baskerville" -->
-    <script src="/js/index.js"></script>
+    <script src="./js/index.js"></script>
     <link href="./styles/style.css" rel="stylesheet" />
     <title>AVIV DROR - DEVELOPER</title>
   </head>
