--- a/index.html
+++ b/index.html
@@ -301,6 +301,7 @@
             <button class="form__detail__but" type="submit">Reach</button>
             <div class="form__icon">
               <svg
+                focusable="none"
                 class="form__icon__fb"
                 width="24"
                 height="24"
@@ -317,6 +318,7 @@
               </svg>
 
               <svg
+                focusable="none"
                 class="form__icon__yt"
                 width="32"
                 height="33"
@@ -330,6 +332,7 @@
                 />
               </svg>
               <svg
+                focusable="none"
                 class="form__icon__gh"
                 width="24"
                 height="24"
