--- a/index.html
+++ b/index.html
@@ -272,10 +272,10 @@
       <!-- about me section -->
       <!-- footer -->
       <form action="submit">
-        <div class="form">
+        <div class="footer">
           <div class="form__detail">
             <input
-              class="form__detail__name"
+              class="form__detail__name boxo"
               type="text"
               name="name"
               id="name"
@@ -283,7 +283,7 @@
               placeholder="name"
             />
             <input
-              class="form__detail__email"
+              class="form__detail__email boxi"
               type="text"
               name="email"
               id="email"
@@ -291,60 +291,64 @@
               placeholder="E-mail"
             />
             <input
-              class="form__detail__mes"
+              class="form__detail__mes boxs"
               type="text"
               name="message"
               id="message"
               required
               placeholder="Message"
             />
-            <button class="form__detail__but" type="submit">Reach</button>
-            <div class="form__icon">
-              <svg
-                focusable="none"
-                class="form__icon__fb"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
+            <button class="form__detail__but but" type="submit">Reach</button>
+            <div class="form__icon but">
+              <a href="https://www.facebook.com/aviv.dror/">
+                <svg
+                  focusable="none"
+                  class="form__icon__fb"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="221700"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M0 12.067C0 18.033 4.333 22.994 10 24V15.333H7V12H10V9.333C10 6.333 11.933 4.667 14.667 4.667C15.533 4.667 16.467 4.8 17.333 4.933V8H15.8C14.333 8 14 8.733 14 9.667V12H17.2L16.667 15.333H14V24C19.667 22.994 24 18.034 24 12.067C24 5.43 18.6 0 12 0C5.4 0 0 5.43 0 12.067Z"
+                  />
+                </svg>
+              </a>
+              <a
+                href="https://www.youtube.com/channel/UCDc3QB1JAx8YrSOJdJ3E5-g"
               >
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M0 12.067C0 18.033 4.333 22.994 10 24V15.333H7V12H10V9.333C10 6.333 11.933 4.667 14.667 4.667C15.533 4.667 16.467 4.8 17.333 4.933V8H15.8C14.333 8 14 8.733 14 9.667V12H17.2L16.667 15.333H14V24C19.667 22.994 24 18.034 24 12.067C24 5.43 18.6 0 12 0C5.4 0 0 5.43 0 12.067Z"
-                  fill="#221700"
-                />
-              </svg>
-
-              <svg
-                focusable="none"
-                class="form__icon__yt"
-                width="32"
-                height="33"
-                viewBox="0 0 32 33"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M16.0765 8H16.21C17.443 8.0045 23.6905 8.0495 25.375 8.5025C25.8842 8.64075 26.3483 8.91023 26.7207 9.28401C27.0932 9.65779 27.361 10.1228 27.4975 10.6325C27.649 11.2025 27.7555 11.957 27.8275 12.7355L27.8425 12.8915L27.8755 13.2815L27.8875 13.4375C27.985 14.8085 27.997 16.0925 27.9985 16.373V16.4855C27.997 16.7765 27.9835 18.1475 27.8755 19.5755L27.8635 19.733L27.85 19.889C27.775 20.747 27.664 21.599 27.4975 22.226C27.3615 22.7359 27.0938 23.2011 26.7212 23.575C26.3487 23.9488 25.8844 24.2182 25.375 24.356C23.635 24.824 17.0215 24.857 16.105 24.8585H15.892C15.4285 24.8585 13.5115 24.8495 11.5015 24.7805L11.2465 24.7715L11.116 24.7655L10.8595 24.755L10.603 24.7445C8.938 24.671 7.3525 24.5525 6.622 24.3545C6.11273 24.2168 5.6486 23.9477 5.27609 23.5741C4.90358 23.2005 4.63577 22.7357 4.4995 22.226C4.333 21.6005 4.222 20.747 4.147 19.889L4.135 19.7315L4.123 19.5755C4.04897 18.5591 4.00795 17.5406 4 16.5215L4 16.337C4.003 16.0145 4.015 14.9 4.096 13.67L4.1065 13.5155L4.111 13.4375L4.123 13.2815L4.156 12.8915L4.171 12.7355C4.243 11.957 4.3495 11.201 4.501 10.6325C4.63704 10.1226 4.90474 9.65737 5.27727 9.28352C5.6498 8.90968 6.11405 8.64034 6.6235 8.5025C7.354 8.3075 8.9395 8.1875 10.6045 8.1125L10.8595 8.102L11.1175 8.093L11.2465 8.0885L11.503 8.078C12.9306 8.03206 14.3587 8.00656 15.787 8.0015H16.0765V8ZM13.6 12.815V20.042L19.8355 16.43L13.6 12.815Z"
-                  fill="#221700"
-                />
-              </svg>
-              <svg
-                focusable="none"
-                class="form__icon__gh"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M12 0C5.37 0 0 5.37 0 12C0 17.31 3.435 21.795 8.205 23.385C8.805 23.49 9.03 23.13 9.03 22.815C9.03 22.53 9.015 21.585 9.015 20.58C6 21.135 5.22 19.845 4.98 19.17C4.845 18.825 4.26 17.76 3.75 17.475C3.33 17.25 2.73 16.695 3.735 16.68C4.68 16.665 5.355 17.55 5.58 17.91C6.66 19.725 8.385 19.215 9.075 18.9C9.18 18.12 9.495 17.595 9.84 17.295C7.17 16.995 4.38 15.96 4.38 11.37C4.38 10.065 4.845 8.985 5.61 8.145C5.49 7.845 5.07 6.615 5.73 4.965C5.73 4.965 6.735 4.65 9.03 6.195C9.99 5.925 11.01 5.79 12.03 5.79C13.05 5.79 14.07 5.925 15.03 6.195C17.325 4.635 18.33 4.965 18.33 4.965C18.99 6.615 18.57 7.845 18.45 8.145C19.215 8.985 19.68 10.05 19.68 11.37C19.68 15.975 16.875 16.995 14.205 17.295C14.64 17.67 15.015 18.39 15.015 19.515C15.015 21.12 15 22.41 15 22.815C15 23.13 15.225 23.505 15.825 23.385C18.2073 22.581 20.2775 21.05 21.744 19.0076C23.2106 16.9653 23.9996 14.5144 24 12C24 5.37 18.63 0 12 0Z"
-                  fill="#221700"
-                />
-              </svg>
+                <svg
+                  focusable="none"
+                  class="form__icon__yt"
+                  width="32"
+                  height="33"
+                  viewBox="0 0 32 33"
+                  fill="221700"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M16.0765 8H16.21C17.443 8.0045 23.6905 8.0495 25.375 8.5025C25.8842 8.64075 26.3483 8.91023 26.7207 9.28401C27.0932 9.65779 27.361 10.1228 27.4975 10.6325C27.649 11.2025 27.7555 11.957 27.8275 12.7355L27.8425 12.8915L27.8755 13.2815L27.8875 13.4375C27.985 14.8085 27.997 16.0925 27.9985 16.373V16.4855C27.997 16.7765 27.9835 18.1475 27.8755 19.5755L27.8635 19.733L27.85 19.889C27.775 20.747 27.664 21.599 27.4975 22.226C27.3615 22.7359 27.0938 23.2011 26.7212 23.575C26.3487 23.9488 25.8844 24.2182 25.375 24.356C23.635 24.824 17.0215 24.857 16.105 24.8585H15.892C15.4285 24.8585 13.5115 24.8495 11.5015 24.7805L11.2465 24.7715L11.116 24.7655L10.8595 24.755L10.603 24.7445C8.938 24.671 7.3525 24.5525 6.622 24.3545C6.11273 24.2168 5.6486 23.9477 5.27609 23.5741C4.90358 23.2005 4.63577 22.7357 4.4995 22.226C4.333 21.6005 4.222 20.747 4.147 19.889L4.135 19.7315L4.123 19.5755C4.04897 18.5591 4.00795 17.5406 4 16.5215L4 16.337C4.003 16.0145 4.015 14.9 4.096 13.67L4.1065 13.5155L4.111 13.4375L4.123 13.2815L4.156 12.8915L4.171 12.7355C4.243 11.957 4.3495 11.201 4.501 10.6325C4.63704 10.1226 4.90474 9.65737 5.27727 9.28352C5.6498 8.90968 6.11405 8.64034 6.6235 8.5025C7.354 8.3075 8.9395 8.1875 10.6045 8.1125L10.8595 8.102L11.1175 8.093L11.2465 8.0885L11.503 8.078C12.9306 8.03206 14.3587 8.00656 15.787 8.0015H16.0765V8ZM13.6 12.815V20.042L19.8355 16.43L13.6 12.815Z"
+                  />
+                </svg>
+              </a>
+              <a href="https://github.com/aviv82">
+                <svg
+                  focusable="none"
+                  class="form__icon__gh"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="221700"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M12 0C5.37 0 0 5.37 0 12C0 17.31 3.435 21.795 8.205 23.385C8.805 23.49 9.03 23.13 9.03 22.815C9.03 22.53 9.015 21.585 9.015 20.58C6 21.135 5.22 19.845 4.98 19.17C4.845 18.825 4.26 17.76 3.75 17.475C3.33 17.25 2.73 16.695 3.735 16.68C4.68 16.665 5.355 17.55 5.58 17.91C6.66 19.725 8.385 19.215 9.075 18.9C9.18 18.12 9.495 17.595 9.84 17.295C7.17 16.995 4.38 15.96 4.38 11.37C4.38 10.065 4.845 8.985 5.61 8.145C5.49 7.845 5.07 6.615 5.73 4.965C5.73 4.965 6.735 4.65 9.03 6.195C9.99 5.925 11.01 5.79 12.03 5.79C13.05 5.79 14.07 5.925 15.03 6.195C17.325 4.635 18.33 4.965 18.33 4.965C18.99 6.615 18.57 7.845 18.45 8.145C19.215 8.985 19.68 10.05 19.68 11.37C19.68 15.975 16.875 16.995 14.205 17.295C14.64 17.67 15.015 18.39 15.015 19.515C15.015 21.12 15 22.41 15 22.815C15 23.13 15.225 23.505 15.825 23.385C18.2073 22.581 20.2775 21.05 21.744 19.0076C23.2106 16.9653 23.9996 14.5144 24 12C24 5.37 18.63 0 12 0Z"
+                  />
+                </svg>
+              </a>
             </div>
           </div>
         </div>
