add social media links

--- a/index.html
+++ b/index.html
@@ -299,8 +299,11 @@
               placeholder="Message"
             />
             <button class="form__detail__but but" type="submit">Reach</button>
-            <div class="form__icon but">
-              <a href="https://www.facebook.com/aviv.dror/">
+            <div class="form__icon buts">
+              <a
+                href="https://www.facebook.com/aviv.dror/"
+                aria-label="FaceBook"
+              >
                 <svg
                   focusable="none"
                   class="form__icon__fb"
@@ -319,6 +322,7 @@
               </a>
               <a
                 href="https://www.youtube.com/channel/UCDc3QB1JAx8YrSOJdJ3E5-g"
+                aria-label="YouTube"
               >
                 <svg
                   focusable="none"
@@ -334,7 +338,7 @@
                   />
                 </svg>
               </a>
-              <a href="https://github.com/aviv82">
+              <a href="https://github.com/aviv82" aria-label="GitHub">
                 <svg
                   focusable="none"
                   class="form__icon__gh"
