--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- imported fonts; "Estonia" and "Libre Baskerville" -->
     <script src="./js/index.js"></script>
     <link href="./styles/style.css" rel="stylesheet" />
-    <title>AVIV DROR - HOME</title>
+    <title>Aviv - Home</title>
   </head>
   <body>
     <!-- bg -->
@@ -63,7 +63,7 @@
       <!-- nav bar -->
       <div class="navbar">
         <a class="navbar__pri" href="#">Find Me</a>
-        <a class="navbar__sec" href="#">My Work</a>
+        <a class="navbar__sec" href="pages/portfolio.html">My Work</a>
       </div>
       <!-- nav bar -->
       <!-- intro section -->
