add portfolio skills section

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -163,6 +163,7 @@
           </svg>
 
           <svg
+            focusable="none"
             class="ssec__par2 parent"
             width="71"
             height="157"
