--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -13,7 +13,7 @@
     />
     <!-- imported fonts; "Estonia" and "Libre Baskerville" -->
     <script src="/js/index.js"></script>
-    <link href="https://raw.githubusercontent.com/aviv82/aviv.home/main/styles/style.css" rel="stylesheet" />
+    <link href="styles/style.css" rel="stylesheet" />
     <title>Aviv - Portfolio</title>
   </head>
   <body>
