--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <!-- imported fonts; "Estonia" and "Libre Baskerville" -->
-    <script src="/js/index.js"></script>
+    <script src="../js/index.js"></script>
     <link href="../styles/style.css" rel="stylesheet" />
     <title>Aviv - Portfolio</title>
   </head>
@@ -67,7 +67,7 @@
       <!-- nav bar -->
       <div class="navbar">
         <a class="navbar__pri" href="#footer">Find Me</a>
-        <a class="navbar__secd" href="/index.html">Home</a>
+        <a class="navbar__secd" href="../index.html">Home</a>
       </div>
       <!-- nav bar -->
       <!-- skills section -->
